--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="https://cdn.ckbox.io/ckbox/1.4.0/styles/themes/dark.css">
   <title>React TypeScript App</title>
 </head>
 
