--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="https://cdn.ckbox.io/ckbox/1.4.0/styles/themes/dark.css">
+  <base href="/">
   <title>React TypeScript App</title>
 </head>
 
