--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>React TypeScript App</title>
+    <title>Hệ thống quản lý văn bản</title>
   </head>
 
   <body>
