--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Hệ thống quản lý văn bản</title>
+    <link rel="icon" type="image/png" href="https://ductt-capstone-bucket.s3.ap-southeast-1.amazonaws.com/assets/favicon_io/favicon-32x32.png" />
 
     <!-- <script src="http://localhost:8080/signalr/hubs"></script> -->
   </head>
