--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
       async function sendToSignalR(id) {
         if (simpleHubProxy != null) {
           simpleHubProxy.server.send(JSON.stringify({
-            
+            llx: 100,
+            lly: 100,
+            urx: 100,
+            ury: 250,
+            searchText: '',
+            FileType: 'PDF',
+            Token: 'xxxx',
+            FileID: id
           }));
         } else {
           console.log('simpleHubProxy is null');
