--- a/index.html
+++ b/index.html
@@ -32,16 +32,47 @@
 
       async function sendToSignalR(id) {
         if (simpleHubProxy != null) {
-          simpleHubProxy.server.send(JSON.stringify({
-            llx: 100,
-            lly: 100,
-            urx: 100,
-            ury: 250,
-            searchText: '',
-            FileType: 'PDF',
-            Token: 'xxxx',
-            FileID: id
-          }));
+          try {
+            const res = await simpleHubProxy.server.send(
+              JSON.stringify({
+                llx: 100,
+                lly: 100,
+                urx: 100,
+                ury: 250,
+                searchText: '',
+                FileType: 'PDF',
+                Token: 'xxxx',
+                FileID: id
+              })
+            );
+            console.log(res);
+          } catch (err) {
+            console.error(err);
+          }
+        } else {
+          console.log('simpleHubProxy is null');
+        }
+      }
+
+      async function sendRawToSignalR(id) {
+        if (simpleHubProxy != null) {
+          try {
+            const res = await simpleHubProxy.server.send(
+              {
+                llx: 100,
+                lly: 100,
+                urx: 100,
+                ury: 250,
+                searchText: '',
+                FileType: 'PDF',
+                Token: 'xxxx',
+                FileID: id
+              }
+            );
+            console.log(res);
+          } catch (err) {
+            console.error(err);
+          }
         } else {
           console.log('simpleHubProxy is null');
         }
