--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Hệ thống quản lý văn bản</title>
-    <link rel="icon" type="image/png" href="https://ductt-capstone-bucket.s3.ap-southeast-1.amazonaws.com/assets/favicon_io/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://ductt-capstone-bucket.s3.ap-southeast-1.amazonaws.com/assets/favicon_io/favicon-32x32.png"
+    />
 
     <!-- <script src="http://localhost:8080/signalr/hubs"></script> -->
   </head>
@@ -21,28 +25,35 @@
         simpleHubProxy = $.connection.simpleHub;
 
         $.connection.hub.start().done(function () {
-          console.log("Connected")
+          console.log('Connected');
         });
       }
       connect();
 
       async function sendToSignalR(id) {
         if (simpleHubProxy != null) {
-          simpleHubProxy.server.setUserName(`debug test signed file ${id}`);
-          simpleHubProxy.server.send({
-            llx: 100,
-            lly: 100,
-            urx: 100,
-            ury: 250,
-            searchText: 'test',
-            FileType: 'PDF',
-            Token: 'xxxx',
-            FileID: id
-          });
+          try {
+            const res = await simpleHubProxy.server.send(
+              JSON.stringify({
+                llx: 100,
+                lly: 100,
+                urx: 100,
+                ury: 250,
+                searchText: '',
+                FileType: 'PDF',
+                Token: 'xxxx',
+                FileID: id
+              })
+            );
+            console.log(res);
+          } catch (err) {
+            console.error(err);
+          }
         } else {
           console.log('simpleHubProxy is null');
         }
       }
+
     </script>
   </body>
 </html>
