add test sign pdf page

--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
 
         simpleHubProxy = $.connection.simpleHub;
 
-        $.connection.hub.start().done(function () {
+        await $.connection.hub.start().done(function () {
           console.log('Connected');
-        });
+          return true
+        }).fail(
+          function () {
+            console.log('Could not Connect!');
+            return false
+          }
+        );
       }
-      connect();
 
       async function sendToSignalR(id) {
         if (simpleHubProxy != null) {
@@ -45,6 +50,19 @@
                 FileID: id
               })
             );
+            console.log(res);
+          } catch (err) {
+            console.error(err);
+          }
+        } else {
+          console.log('simpleHubProxy is null');
+        }
+      }
+
+      async function setUserName (name) {
+        if (simpleHubProxy != null) {
+          try {
+            const res = await simpleHubProxy.server.setUserName(name);
             console.log(res);
           } catch (err) {
             console.error(err);
