--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
+    <script type="module" src="/firebase-messaging-sw.js"></script>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/signalr.js/2.1.0/jquery.signalR.js"></script>
     <script src="http://localhost:8080/signalr/hubs"></script>
